Fixes white space problem in drop down

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -112,6 +112,7 @@ label {
 }
 
 .dropdown {
+    white-space: normal;
     display: inline-block;
     position: relative;
     &:hover .dropdown-content{
